tests/baselines/reference/assignmentToParenthesizedExpression1.errors.txt
tests/cases/compiler/assignmentToParenthesizedExpression1.ts(2,1): error TS2364: The left-hand side of an assignment expression must be a variable or a property access.


==== tests/cases/compiler/assignmentToParenthesizedExpression1.ts (1 errors) ====
    var x;
    (1, x)=0;
    ~~~~~~
!!! error TS2364: The left-hand side of an assignment expression must be a variable or a property access.